[package]
name = "uwiki"
version = "0.1.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
