[package]
name = "uwiki"
version = "0.1.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bcrypt = "0.10"
bytes = "1.0.1"
csrf = "0.4.0"
dotenv = "0.15"
futures = "0.3.15"
handlebars = "4.0"
log = "0.4"
maplit = "1.0"
pandoc = "0.8"
pretty_env_logger = "0.4"
rand = "0.8"
serde = "1.0"
serde_derive = "1.0.126"
serde_json = "1.0.64"
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls", "offline" ] }
tokio = { version = "1", features = ["full"] }
uwiki-types = "0.3"
warp = "0.3"
warp-sessions = "1.0.15"
